--- a/lista_zodiacal.html
+++ b/lista_zodiacal.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Mi pagina de signos zodiacales"</title>
+    <title>Signos del Zodiaco</title>
 </head>
 <body>
-    <h1>"Mi pagina de signos zodiacales"</h1>
-
-<ol>
+    <h1>Signos del Zodiaco</h1>
+    <ol>
         <li>Aries</li>
         <li>Tauro</li>
         <li>Géminis</li>
@@ -22,6 +20,5 @@
         <li>Acuario</li>
         <li>Piscis</li>
     </ol>
-
 </body>
 </html>
